finished the project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,225 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin Dashboard</title>
+		<link rel="stylesheet" href="styles/style.css" />
 	</head>
-	<body></body>
+	<body>
+		<main class="container">
+			<div class="container_header">
+				<div class="header_up">
+					<div class="header_up_search">
+						<img src="img/magnify.svg" alt="" />
+						<input class="search_bar" type="search" name="" id="" />
+					</div>
+					<div class="header_up_profile">
+						<img src="img/bell-ring-outline.svg" alt="" />
+						<img class="avatar" src="img/avataaars.png" alt="" />
+						<p class="profile_name">José Sérgio</p>
+					</div>
+				</div>
+				<div class="header_down">
+					<div class="header_down_profile">
+						<img src="img/avataaars.png" alt="" />
+						<p class="profile_name_down">
+							Hi there,
+							<span>José Sérgio</span>
+						</p>
+					</div>
+					<div class="header_down_btn">
+						<div class="btn">new</div>
+						<div class="btn">upload</div>
+						<div class="btn">share</div>
+					</div>
+				</div>
+			</div>
+			<div class="container_sidebar">
+				<div class="sidebar_logo">
+					<img src="img/view-dashboard.svg" alt="" />
+					<h1>Dashboard</h1>
+				</div>
+				<div class="sidebar_nav_up">
+					<div class="nav_up_elements">
+						<img src="img/home.svg" alt="" />
+						<p>Home</p>
+					</div>
+					<div class="nav_up_elements">
+						<img src="img/card-account-mail-outline.svg" alt="" />
+						<p>Profile</p>
+					</div>
+					<div class="nav_up_elements">
+						<img src="img/message-reply.svg" alt="" />
+						<p>Profile</p>
+					</div>
+					<div class="nav_up_elements">
+						<img src="img/clock.svg" alt="" />
+						<p>History</p>
+					</div>
+					<div class="nav_up_elements">
+						<img src="img/note-multiple.svg" alt="" />
+						<p>Tasks</p>
+					</div>
+					<div class="nav_up_elements">
+						<img src="img/account-group.svg" alt="" />
+						<p>Communities</p>
+					</div>
+				</div>
+				<div class="sidebar_nav_down">
+					<div class="nav_down_elements">
+						<img src="img/cog.svg" alt="" />
+						<p>Settings</p>
+					</div>
+					<div class="nav_down_elements">
+						<img src="img/help-box.svg" alt="" />
+						<p>Support</p>
+					</div>
+					<div class="nav_down_elements">
+						<img src="img/shield-check.svg" alt="" />
+						<p>Privacy</p>
+					</div>
+				</div>
+			</div>
+			<div class="container_main">
+				<div class="main_article">
+					<p>Your Projects</p>
+					<div class="cards_article">
+						<p class="title">Super Cool Project</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto autem velit odio explicabo, delectus natus, in doloremque,
+							itaque nesciunt excepturi at saepe expedita adipisci voluptate similique dolores ducimus? Ad, quibusdam.
+						</p>
+						<div class="icons_box">
+							<img src="img/star-plus-outline.svg" alt="star-icon" class="icons" />
+							<img src="img/eye-plus-outline.svg" alt="eye-icon" class="icons" />
+							<img src="img/share-variant.svg" alt="share-icon" class="icons" />
+						</div>
+					</div>
+					<div class="cards_article">
+						<p class="title">Super Cool Project</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto autem velit odio explicabo, delectus natus, in doloremque,
+							itaque nesciunt excepturi at saepe expedita adipisci voluptate similique dolores ducimus? Ad, quibusdam.
+						</p>
+						<div class="icons_box">
+							<img src="img/star-plus-outline.svg" alt="star-icon" class="icons" />
+							<img src="img/eye-plus-outline.svg" alt="eye-icon" class="icons" />
+							<img src="img/share-variant.svg" alt="share-icon" class="icons" />
+						</div>
+					</div>
+					<div class="cards_article">
+						<p class="title">Super Cool Project</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto autem velit odio explicabo, delectus natus, in doloremque,
+							itaque nesciunt excepturi at saepe expedita adipisci voluptate similique dolores ducimus? Ad, quibusdam.
+						</p>
+						<div class="icons_box">
+							<img src="img/star-plus-outline.svg" alt="star-icon" class="icons" />
+							<img src="img/eye-plus-outline.svg" alt="eye-icon" class="icons" />
+							<img src="img/share-variant.svg" alt="share-icon" class="icons" />
+						</div>
+					</div>
+					<div class="cards_article">
+						<p class="title">Super Cool Project</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto autem velit odio explicabo, delectus natus, in doloremque,
+							itaque nesciunt excepturi at saepe expedita adipisci voluptate similique dolores ducimus? Ad, quibusdam.
+						</p>
+						<div class="icons_box">
+							<img src="img/star-plus-outline.svg" alt="star-icon" class="icons" />
+							<img src="img/eye-plus-outline.svg" alt="eye-icon" class="icons" />
+							<img src="img/share-variant.svg" alt="share-icon" class="icons" />
+						</div>
+					</div>
+					<div class="cards_article">
+						<p class="title">Super Cool Project</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto autem velit odio explicabo, delectus natus, in doloremque,
+							itaque nesciunt excepturi at saepe expedita adipisci voluptate similique dolores ducimus? Ad, quibusdam.
+						</p>
+						<div class="icons_box">
+							<img src="img/star-plus-outline.svg" alt="star-icon" class="icons" />
+							<img src="img/eye-plus-outline.svg" alt="eye-icon" class="icons" />
+							<img src="img/share-variant.svg" alt="share-icon" class="icons" />
+						</div>
+					</div>
+					<div class="cards_article">
+						<p class="title">Super Cool Project</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto autem velit odio explicabo, delectus natus, in doloremque,
+							itaque nesciunt excepturi at saepe expedita adipisci voluptate similique dolores ducimus? Ad, quibusdam.
+						</p>
+						<div class="icons_box">
+							<img src="img/star-plus-outline.svg" alt="star-icon" class="icons" />
+							<img src="img/eye-plus-outline.svg" alt="eye-icon" class="icons" />
+							<img src="img/share-variant.svg" alt="share-icon" class="icons" />
+						</div>
+					</div>
+				</div>
+				<div class="main_side">
+					<div class="announcements">
+						<div class="title_announcements">
+							<h2>Announcements</h2>
+						</div>
+						<div class="announcements_box">
+							<div class="announcement_card">
+								<p class="title_an">Site Maintenance</p>
+								<p class="announcements_text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ratione, nisi quos hic sed distinctio at unde voluptates
+									ducimus a delectus consectetur libero inventore dolore aspernatur harum numquam accusantium non.
+								</p>
+							</div>
+							<div class="announcement_card">
+								<p class="title_an">Community Share Day</p>
+								<p class="announcements_text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ratione, nisi quos hic sed distinctio at unde voluptates
+									ducimus a delectus consectetur libero inventore dolore aspernatur harum numquam accusantium non.
+								</p>
+							</div>
+							<div class="announcement_card">
+								<p class="title_an">Update Privacy Policy</p>
+								<p class="announcements_text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ratione, nisi quos hic sed distinctio at unde voluptates
+									ducimus a delectus consectetur libero inventore dolore aspernatur harum numquam accusantium non.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="trending">
+						<div class="title-trending">
+							<h2>Trending</h2>
+						</div>
+						<div class="trending-box">
+							<div class="trending-card">
+								<img src="img/01.png" alt="avatar" />
+								<div class="trending-text">
+									<p class="user-id">@user</p>
+									<p class="user-about">Something Something</p>
+								</div>
+							</div>
+							<div class="trending-card">
+								<img src="img/02.png" alt="avatar" />
+								<div class="trending-text">
+									<p class="user-id">@user</p>
+									<p class="user-about">Super Cool Project</p>
+								</div>
+							</div>
+							<div class="trending-card">
+								<img src="img/03.png" alt="avatar" />
+								<div class="trending-text">
+									<p class="user-id">@user</p>
+									<p class="user-about">Life Changing App</p>
+								</div>
+							</div>
+							<div class="trending-card">
+								<img src="img/04.png" alt="avatar" />
+								<div class="trending-text">
+									<p class="user-id">@user</p>
+									<p class="user-about">No Traffic maker</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
